# LH_DE_VANESSA_AIDA

./: README.md  pyproject.toml
airflow/: .env  docker-compose.yaml
airflow/config/: airflow.cfg
airflow/dags/: etl_pipeline.py
airflow/dbdata/: postmaster.pid
airflow/dbdata/base/1/: 2619  2696  2840  2841  pg_internal.init
airflow/dbdata/base/16384/: 1249  1259  16430_fsm  16430_vm  2606  2608  2610  2619  2620  2696  2840  2841  3501  pg_internal.init
airflow/dbdata/base/5/: pg_internal.init
airflow/dbdata/global/: 1260  pg_control  pg_internal.init
airflow/dbdata/pg_stat/: pgstat.stat
