[project]
name = "projeto-indicium"
version = "0.1.0"
description = ""
authors = [
    {name = "vanessa.aida"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13 || >3.13"
dependencies = [
    "apache-airflow (>=3.0.6,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "apache-airflow-providers-postgres (>=6.2.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
